# traitable

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  scanner.rs
crates/core/src/cargo/: manifest.rs  mod.rs  resolver.rs
crates/core/tests/: cargo.rs
crates/core/tests/stubs/basic/: Cargo.toml
examples/rbac/: Cargo.toml
examples/rbac/src/: lib.rs  user.rs
examples/rpc-proto/: Cargo.toml
examples/rpc-proto/src/: contacts.rs  lib.rs  users.rs
src/: lib.rs
