[workspace]
members = ["examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "traitable"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
traitable-core = { path = "crates/core" }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"]}